crates/hir-ty/tests/snapshots/jls_inference_gaps__lub_null_tolerant.snap
---
source: crates/hir-ty/tests/jls_inference_gaps.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.function.Function;

class Body {
    <T> T with(Function<String, T> f) {
        return null;
    }

    void test(boolean c) {
        String s = with(x -> {
            if (c) {
                return "a";
            } else {
                return null;
            }
        });
    }
}

method with(java.util.function.Function<java.lang.String, T>): T
  locals: l0: java.util.function.Function<java.lang.String, T>
  exprs: e0: null
method test(boolean): void
  locals: l1: boolean | l2: java.lang.String
  exprs: e1: boolean | e2: boolean | e3: java.lang.String | e4: null | e5: java.util.function.Function<java.lang.String, java.lang.String> | e6: java.lang.String
