crates/hir-ty/tests/snapshots/jls_inference_gaps__void_block_standalone.snap
---
source: crates/hir-ty/tests/jls_inference_gaps.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    <T> T take(String s) {
        return null;
    }

    void run(java.lang.Runnable r) {}

    void test() {
        run(() -> {
            take("x");
        });
    }
}

method take(java.lang.String): T
  locals: l0: java.lang.String
  exprs: e0: null
method run(java.lang.Runnable): void
  locals: l1: java.lang.Runnable
  exprs: 
method test(): void
  locals: 
  exprs: e1: java.lang.String | e2: java.lang.Object | e3: java.lang.Runnable | e4: void
